force-app/main/default/objects/Immoframe_Konfiguration__c/Immoframe_Konfiguration__c.object-meta.xml
<CustomObject>
    <label>Immoframe Konfiguration</label>
    <nameField>
        <displayFormat>IK-{000000}</displayFormat>
        <label>Immoframe Konfiguration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Immoframe Konfigurationen</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>