force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Betreuteswohnen__c.field-meta.xml
<CustomField>
    <fullName>Betreuteswohnen__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Betreutes Wohnen</label>
    <type>Checkbox</type>
</CustomField>