force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <defaultValue>&quot;#3ad235&quot;</defaultValue>
    <label>Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>