force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Exposee__c.field-meta.xml
<CustomField>
    <fullName>Exposee__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exposé</label>
    <type>Checkbox</type>
</CustomField>