force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Factsheets__c.field-meta.xml
<CustomField>
    <fullName>Factsheets__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Factsheet</label>
    <type>Checkbox</type>
</CustomField>