force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Ferienimmobilie__c.field-meta.xml
<CustomField>
    <fullName>Ferienimmobilie__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ferienimmobilie</label>
    <type>Checkbox</type>
</CustomField>