force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Grundriss__c.field-meta.xml
<CustomField>
    <fullName>Grundriss__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Grundriss</label>
    <type>Checkbox</type>
</CustomField>