force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Kapitalanlage__c.field-meta.xml
<CustomField>
    <fullName>Kapitalanlage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Kapitalanlage</label>
    <type>Checkbox</type>
</CustomField>