force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Lightcolor__c.field-meta.xml
<CustomField>
    <fullName>Lightcolor__c</fullName>
    <label>Light Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>