force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Makler__c.field-meta.xml
<CustomField>
    <fullName>Makler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Makler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Immoframe Konfigurationen</relationshipLabel>
    <relationshipName>Immoframe_Konfigurationen</relationshipName>
    <type>Lookup</type>
</CustomField>