force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Mikroapartments__c.field-meta.xml
<CustomField>
    <fullName>Mikroapartments__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mikroapartments</label>
    <type>Checkbox</type>
</CustomField>