force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Pflegeapartments__c.field-meta.xml
<CustomField>
    <fullName>Pflegeapartments__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Pflegeapartments</label>
    <type>Checkbox</type>
</CustomField>