force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Pflegeimmobilie__c.field-meta.xml
<CustomField>
    <fullName>Pflegeimmobilie__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Pflegeimmobilien</label>
    <type>Checkbox</type>
</CustomField>