force-app/main/default/objects/Immoframe_Konfiguration__c/fields/ServiceWohnungen__c.field-meta.xml
<CustomField>
    <fullName>ServiceWohnungen__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Service-Wohnungen</label>
    <type>Checkbox</type>
</CustomField>