force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Theme</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>