force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Transparent__c.field-meta.xml
<CustomField>
    <fullName>Transparent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Transparenter Hintergrund</label>
    <type>Checkbox</type>
</CustomField>