force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>Ihre URL</label>
    <type>Url</type>
</CustomField>