force-app/main/default/objects/Immoframe_Konfiguration__c/fields/Wohnimmobilien__c.field-meta.xml
<CustomField>
    <fullName>Wohnimmobilien__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Wohnimmobilien</label>
    <type>Checkbox</type>
</CustomField>